other/allowed-annotations/.chainsaw-test/podcontroller-bad.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: baddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      annotations:
        foo: bar
        fluxcd.io/foo: bar
      labels:
        app: busybox
    spec:
      containers:
        - name: bb-01
          image: busybox:1.35
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: baddeployment02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      annotations:
        fluxcd.io/cat: meow
        fluxcd.io/cow: moo
      labels:
        app: busybox
    spec:
      containers:
        - name: bb-01
          image: busybox:1.35
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob01
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        metadata:
          annotations:
            foo: bar
            fluxcd.io/foo: bar
        spec:
          containers:
          - name: hello
            image: busybox:1.35
            imagePullPolicy: IfNotPresent
            command:
            - "sleep"
            - "3600"
          restartPolicy: OnFailure
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob02
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        metadata:
          annotations:
            fluxcd.io/cat: meow
            fluxcd.io/cow: moo
        spec:
          containers:
          - name: hello
            image: busybox:1.35
            imagePullPolicy: IfNotPresent
            command:
            - "sleep"
            - "3600"
          restartPolicy: OnFailure
