other/allowed-annotations/.chainsaw-test/podcontroller-good.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: gooddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      annotations:
        foo: bar
      labels:
        app: busybox
    spec:
      containers:
        - name: bb-01
          image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: gooddeployment02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      annotations:
        fluxcd.io/cow: moo
        fluxcd.io/dog: bark
      labels:
        app: busybox
    spec:
      containers:
        - name: bb-01
          image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: gooddeployment03
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
        - name: bb-01
          image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob01
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        metadata:
          annotations:  
            foo: bar
        spec:
          containers:
          - name: hello
            image: ghcr.io/kyverno/test-busybox:1.35
            imagePullPolicy: IfNotPresent
            command:
            - "sleep"
            - "3600"
          restartPolicy: OnFailure
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob02
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        metadata:
          annotations:
            fluxcd.io/cow: moo
            fluxcd.io/dog: bark
        spec:
          containers:
          - name: hello
            image: ghcr.io/kyverno/test-busybox:1.35
            imagePullPolicy: IfNotPresent
            command:
            - "sleep"
            - "3600"
          restartPolicy: OnFailure
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob03
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          containers:
          - name: hello
            image: ghcr.io/kyverno/test-busybox:1.35
            imagePullPolicy: IfNotPresent
            command:
            - "sleep"
            - "3600"
          restartPolicy: OnFailure
